<resources>
    <string name="app_name">Laris-AF</string>
    <string name="login"> Sign In</string>
    <string name="logo_app">Logo App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email_address">Email Address</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="no_hp_telp">No Hp / Telp</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_instruction">Masukan Email terdaftar anda \nuntuk mendapatkan password baru anda</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keranjang">Keranjang</string>
    <string name="beranda">Beranda</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="transaksi">Transaksi</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="reset_here"> Reset Here</string>
    <string name="username_email">Username / Email</string>
    <string name="sample_rp">Rp.10.000</string>
    <string name="sample_tittle">Product Title</string>
    <string name="daftar_produk">Daftar Produk</string>
    <string name="beli">Beli</string>
    <string name="harga_produk">Harga produk :</string>
    <string name="sisa_barang">Jumlah stok :</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="lanjutkan_pembayaran">Beli Sekarang</string>
    <string name="mohon_tunggu">Mohon Tunggu…</string>
    <string name="daftar_keranjang">Daftar Keranjang</string>
    <string name="total_harga_barang">Total Harga Barang</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="filter_produk">Filter Produk</string>
    <string name="pilih_semua">Pilih Semua</string>
    <string name="hapus">Hapus</string>
    <string name="daftar_keranjang_kosong">Daftar Keranjang Kosong</string>
    <string name="masukkan_jumlah_barang">Masukkan Jumlah Barang</string>
    <string name="close_btn">close_btn</string>
    <string name="simpan">Simpan</string>
    <string name="_1">1</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="pilihan_pembayaran">Pilihan Pembayaran</string>
    <string name="bayar_ditempat">Bayar Ditempat</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="input_alamat">Input Alamat</string>
    <string name="tambahkan_catatan">Tambahkan Catatan</string>
    <string name="tambahkan_catatan_untuk_penjual">Tambahkan catatan untuk penjual</string>
    <string name="rincian_pembayaran">Rincian Pembayaran</string>
    <string name="total_harga">Total Harga</string>
    <string name="ongkos_kirim">Ongkos Kirim</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="todo">TODO</string>
    <string name="edit_data_pribadi_anda">Edit Data Pribadi Anda</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="help_and_support">Help and support</string>
    <string name="logout">Logout</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="no_rekening_pembayaran_bca_290329032_nupload_bukti_transfer">No Rekening Pembayaran :  BNI - 034-084-8282 AN ABDUL FATTAH, Upload Bukti Transfer :</string>
    <string name="keluar">Keluar</string>
    <string name="batal">Batal</string>
    <string name="anda_yakin_ingin_membatalkan_transaksi">Anda yakin ingin membatalkan transaksi ?</string>
    <string name="change_password">Change Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="password_lama">Password Lama</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="tidak">Tidak</string>
    <string name="iya">Iya</string>
    <string name="selesai">Selesai</string>
    <string name="prosess">Prosess</string>
    <string name="histori_transaksi">Histori Transaksi</string>
    <string name="belum_ada_transaksi">Belum Ada Transaksi</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="diproses">Diproses</string>
    <string name="produk">Produk</string>
    <string name="update_produk">Update Produk</string>
    <string name="input_nama_produk">Input Nama Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="input_harga">Input Harga</string>
    <string name="harga">Harga</string>
    <string name="input_deslripsi">Input Deskripsi</string>
    <string name="kategori">Kategori</string>
    <string name="jumlah_produk">Jumlah Produk</string>
    <string name="foto_produk">Foto Produk</string>
    <string name="upload">Upload</string>
    <string name="update">Update</string>
    <string name="input_jumlah_produk">Input Jumlah Produk</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="bukti_transfer">Bukti Transfer</string>
    <string name="alamat_pemesanan">Alamat Pemesanan</string>
    <string name="catatan">Catatan</string>
    <string name="status_pesanan">Status Pesanan</string>
    <string name="konfirmasi_pesanan">Konfirmasi</string>
    <string name="total_penghasilan_saat_ini">Total Penghasilan Saat Ini :</string>
    <string name="laporan">Laporan</string>
    <string name="input_no_handphone">Input No Handphone</string>
    <string name="pilih_bulan_dan_tahun">Pilih Bulan dan Tahun</string>
    <string name="download">Download</string>
    <string name="konfirmasi_update">Konfirmasi Update</string>
    <string name="daftar_3_produk_paling_laris">Daftar Produk Paling Laris</string>
    <string name="produk_terjual_hari_ini">Produk Terjual Hari ini</string>
    <string name="pemasukan_hari_ini">Pemasukan Hari Ini</string>
    <string name="loading">Loading..</string>
    <string name="produk_tersedia">Produk Tersedia</string>
    <string name="input_kategori">Input Kategori</string>
    <string name="tambah_discount">Tambah Discount</string>
    <string name="input_minimal_pembelian">Input Minimal Pembelian</string>
    <string name="input_besar_discount">Input Besar Discount</string>
    <string name="potongan_harga">Potongan Harga</string>
    <string name="aktifitas_karyawan">Manajemen Karyawan</string>
    <string name="pengaturan_harga_ongkir">Pengaturan Harga Ongkir</string>
    <string name="input_harga_ongkos_kirim">Input Harga Ongkos Kirim</string>
    <string name="ongkir_3_km_5_km">Ongkir 3 Km - 5 Km</string>
    <string name="ongkir_0_km_2_km">Ongkir 0 Km - 2 Km</string>
    <string name="ongkir_diatas_10_km">Ongkir Diatas 10 Km</string>
    <string name="lokasi">Lokasi</string>
    <string name="pegawai">Karyawan</string>
    <string name="data">Data</string>
    <string name="aktifitas">Aktifitas</string>
    <string name="tambah_karyawan">Tambah Karyawan</string>

    <string-array name="category_spinner">
        <item>Sembako</item>
        <item>Kelontong</item>
    </string-array>
</resources>