<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_popup"
    android:padding="@dimen/_15sdp">

    <ImageView
        android:id="@+id/close_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/ic_baseline_close_24" />

    <TextView
        android:id="@+id/cp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:fontFamily="@font/sf_ui"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_18ssp" />

    <ImageView
        android:id="@+id/img_cp_dialog"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_below="@+id/cp_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/jularis" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_cp_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_cp_dialog"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_lama"
        android:textColorHint="@color/abu"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_cp_old"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/dosis_semibold"
            android:inputType="textPassword"
            android:textColor="@color/hitam" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_cp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_cp_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:hint="@string/password_baru"
        android:textColorHint="@color/abu"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_cp_new"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/dosis_semibold"
            android:inputType="textPassword"
            android:textColor="@color/hitam" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit_cp"
        android:layout_marginTop="@dimen/_20sdp"
        style="@style/SpinKitView.Large.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout_cp"
        android:layout_centerHorizontal="true"
        app:SpinKit_Color="@color/colorPrimary"
        />

    <Button
        android:id="@+id/btn_cp_submit"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_below="@+id/textInputLayout_cp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/dosis_extrabold"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/submit"
        android:textColor="#FFF"
        android:textSize="@dimen/_13ssp" />
</RelativeLayout>